feat: monospace font, edit global styles

--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -3,7 +3,6 @@
 @layer base {
   * {
     @apply selection:bg-secondary selection:text-background underline-offset-3 text-base border-border;
-    font-family: 'Nunito', sans-serif;
     font-weight: 500;
     letter-spacing: 0.005em;
     box-sizing: border-box;
@@ -14,17 +13,22 @@
   }
 
   *[class*='font-mono'] {
+    font-weight: 400;
     text-box: trim-both cap alphabetic;
     padding-bottom: 0.5rem;
   }
 
   body {
     @apply bg-background text-foreground font-sans overflow-y-scroll antialiased;
+    font-family: 'Nunito', sans-serif;
+
   }
 }
 
 @theme inline {
-  --font-weight-medium: 700;
+  --font-mono: 'Cascadia Code', monospace;
+
+  --font-weight-medium: 500;
 
   --text-2xl: calc(var(--text-base) * 1.75);
   --text-xl: calc(var(--text-base) * 1.5);
@@ -32,9 +36,6 @@
   --text-base: 1.075rem;
   --text-sm: calc(var(--text-base) * 0.9);
   --text-xs: calc(var(--text-base) * 0.75);
-
-  --font-sans: var(--next-font-sans);
-  --font-mono: var(--next-font-mono);
 
   --animate-fancy-fade-in: fancy-fade-in 0.65s ease-in-out;
 
