--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -26,7 +26,7 @@
 }
 
 @theme inline {
-  --font-mono: 'Lilex', monospace;
+  --font-mono: 'Paper Mono', monospace;
 
   --font-weight-medium: 500;
 
