--- a/app/assets/css/globals.css
+++ b/app/assets/css/globals.css
@@ -60,10 +60,14 @@
 
 @layer base {
   * {
-    @apply selection:bg-secondary selection:text-background underline-offset-3 text-base border-border antialiased;
+    @apply selection:bg-secondary selection:text-background underline-offset-3 text-base border-border;
     font-weight: 400;
-    letter-spacing: 0.01em;
+    letter-spacing: 0.015em;
     font-optical-sizing: auto;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
     grid-area: 1 / 1 / 1 / 1;
     min-width: 0;
@@ -77,6 +81,6 @@
   }
 
   body {
-    @apply bg-background text-foreground font-sans overflow-y-scroll antialiased;
+    @apply bg-background text-foreground font-sans overflow-y-scroll;
   }
 }
